[package]
name = "json-url"
version = "0.1.0"
authors = ["nathankrischer <me@nathankrischer.com>"]
description = "A library for compressing and decompressing JSON for use in URLs."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
serde = "1.0"
serde_json = "1.0"
rust-lzma = "0.5"
